--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -10,17 +10,21 @@
                     <h4>{{book.name}}</h4>
                     <h5 style="font-size: larger;">S/. {{book.price}}</h5>
                 </div>
-                <button class="btn btn-outline-danger" (click)="remove(book)">
+                <button class="btn btn-outline-danger" (click)="removeItem(book)">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
                         <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5M8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5m3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0"/>
                     </svg>
                 </button>
             </div>
         }
-    </div>  
+    </div>
+    <div style="display: flex; justify-content: end; margin-top: 25px;">
+        <h3 style="margin-bottom: 20px; font-weight: 600;">Total: S/. {{cartTotal}}</h3>
+    </div>
     <button 
         class="btn btn-primary"
         style="height: 50px; font-size: larger; font-weight: 500; margin-top: 25px;"
+        routerLink="/checkout"
     >
         Place Order
     </button>
